deploy/k8s/overlays/zprod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: li3d
spec:
  tls:
    - hosts:
        - li3d.lilithgames.com
      secretName: li3d-tls
  rules:
    - host: li3d.lilithgames.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: li3d-web
                port:
                  number: 80
